@@ -3,6 +3,7 @@ Jython NEWS
 Jython 2.5.2a1
   Bugs Fixed
     - [ 1478 ] defaultdict & weakref.WeakKeyDictionary [TypeError: first argument must be callable]
+    - [ 1487 ] Import of module with latin-1 chars fails on utf-8 file encoding
     - Fix runtime issues during exitfuncs triggered via SystemRestart (such as
       during Django or Pylons development mode reloading)
 
